# mebox

./: Dockerfile  Makefile  README.md  conftest.py  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
mebox/: asgi.py  settings.py  urls.py  wsgi.py
tests/: README.md  test_admin.py  test_cross_user_links.py  test_follows.py  test_forms.py  test_integration.py  test_invalid_link_handling.py  test_markdown_extensions.py  test_models.py  test_signals.py  test_templates.py  test_urls.py  test_userbox.py  test_views.py  test_wiki_link_integration.py
wiki/: admin.py  apps.py  forms.py  markdown_extensions.py  models.py  signals.py  urls.py  views.py
wiki/migrations/: 0001_initial.py  0002_follow.py  0002_pagerevision_useractivity.py  0003_alter_useractivity_options.py
wiki/templates/wiki/: activity.html  base.html  create_page.html  delete_page.html  edit_page.html  home.html  login.html  profile.html  restore_confirm.html  revisions.html  signup.html  view_page.html
wiki/templatetags/: wiki_extras.py
