[project]
name = "mebox"
version = "0.1.0"
description = "A social media network based around shared wikis and userboxes"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "markdown-it-py>=3.0",
    "mdurl>=0.1",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "ty>=0.0.14",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mebox.settings"
python_files = ["tests.py", "test_*.py"]
addopts = "--cov=wiki --cov-report=term-missing"
