[project]
name = "mebox"
version = "0.1.0"
description = "A social media network based around shared wikis and userboxes"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "django-stubs[compatible-mypy]>=1.9.0",
    "markdown-it-py>=3.0",
    "mdurl>=0.1",
    "mypy>=1.19.1",
    "python-multipart>=0.0.6",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.10.0",
    "ruff>=0.14.14",
    "pytest>=8.4.2",
    "pytest-django>=4.0",
    "pytest-cov>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mebox.settings"
python_files = ["tests.py", "test_*.py"]
addopts = "--cov=wiki --cov-report=term-missing"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
allow_redefinition = true
implicit_reexport = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["tests.*", "*.tests"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["wiki.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "mebox.settings"
strict_settings = false
